[package]
name = "rust-ahash-target-native-performance-issue"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/fr0staman/rust-ahash-target-native-performance-issue/"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ahash = "0.8.6"
rand = "0.8.5"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "issue"
harness = false

# Profile for condifence 
[profile.bench]
lto = true
opt-level = 3
codegen-units = 1
